# bronze_silver_functions

./: main.py  pyproject.toml
etl_functions/silver/: silver_class.py
utils/etl_functions_new/bronze/: bronze_class.py
