[project]
name = "bronze-silver-functions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-connect==18.1.0",
]

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["utils"]
exclude = [".venv*"]
